log/build_2025-11-24_04-27-12/tello/stderr.log
  File "/workspaces/ARF/install/tello/lib/python3.12/site-packages/tello/tello.py", line 5
    import 
           ^
SyntaxError: invalid syntax

